k8s/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
  namespace: prod
spec:
  selector:
    app: email
  ports:
    - name: grpc
      protocol: TCP
      port: 3091
      targetPort: 3091
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: email-mysql-master-service
  namespace: prod
spec:
  selector:
    app: email
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: email-phpmyadmin-service
  namespace: prod
spec:
  selector:
    app: email
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 80
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: email-redis-service
  namespace: prod
spec:
  selector:
    app: email
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: email-redis-gui-service
  namespace: prod
spec:
  selector:
    app: email
  ports:
    - protocol: TCP
      port: 3081
      targetPort: 8081
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: email-fluent-bit-service
  namespace: prod
spec:
  selector:
    app: email
  ports:
    - name: tcp
      protocol: TCP
      port: 24220
      targetPort: 24224
    - name: udp
      protocol: UDP
      port: 24220
      targetPort: 24224
  type: NodePort
